--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-permissions": "^3.6.1",
