--- a/ios/ChatApp/Info.plist
+++ b/ios/ChatApp/Info.plist
@@ -37,6 +37,8 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>채팅앱은 프로필 사진 설정, 클럽 생성 시 사진첨부를 위해 사진 갤러리를 사용합니다</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
