--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@react-native-firebase/auth": "^17.0.0",
     "@react-native-firebase/firestore": "^17.0.0",
     "@react-native-firebase/messaging": "^17.0.0",
+    "@react-native-firebase/storage": "^17.0.0",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.1",
+    "react-native-image-crop-picker": "^0.39.0",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
