Feat: 오디오 관련 기능 구현

--- a/ios/ChatApp/Info.plist
+++ b/ios/ChatApp/Info.plist
@@ -39,6 +39,8 @@
 	<string></string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>채팅앱은 프로필 사진 설정, 클럽 생성 시 사진첨부를 위해 사진 갤러리를 사용합니다</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
