--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.1",
+    "react-native-audio-recorder-player": "^3.5.3",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-permissions": "^3.6.1",
